--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
+  h1 Bottoms Up Democracy
   p.lead A boilerplate for Node.js web applications.
   hr
   .row
